--- a/index.html
+++ b/index.html
@@ -8,9 +8,226 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header></header>
+    <header>
+        <button>Speaker View</button>
+        <button>X</button>
+    </header>
     <main>
-        
+        <section class="container row users">
+            <article class="user">
+                <div class="user-photo">
+                    <img src="img\cane.jpeg" alt="">
+                    <div class="nome-user">PincoPallo</div>
+                </div>
+            </article>
+            <article class="user">
+                <div class="user-photo">
+                    <img src="img\cane.jpeg" alt="">
+                    <div class="nome-user">PincoPallo</div>
+                </div>
+            </article>
+            <article class="user">
+                <div class="user-photo">
+                    <img src="img\cane.jpeg" alt="">
+                    <div class="nome-user">PincoPallo</div>
+                </div>
+            </article>
+            <article class="user">
+                <div class="user-photo">
+                    <img src="img\cane.jpeg" alt="">
+                    <div class="nome-user">PincoPallo</div>
+                </div>
+            </article>
+            <article class="user">
+                <div class="user-photo">
+                    <img src="img\cane.jpeg" alt="">
+                    <div class="nome-user">PincoPallo</div>
+                </div>
+            </article><article class="user">
+                <div class="user-photo">
+                    <img src="img\cane.jpeg" alt="">
+                    <div class="nome-user">PincoPallo</div>
+                </div>
+            </article>
+            <article class="user">
+                <div class="user-photo">
+                    <img src="img\cane.jpeg" alt="">
+                    <div class="nome-user">PincoPallo</div>
+                </div>
+            </article>
+        </section>
+        <section class="container row users">
+            <article class="user">
+                <div class="user-photo">
+                    <img src="img\cane.jpeg" alt="">
+                    <div class="nome-user">PincoPallo</div>
+                </div>
+            </article>
+            <article class="user">
+                <div class="user-photo">
+                    <img src="img\cane.jpeg" alt="">
+                    <div class="nome-user">PincoPallo</div>
+                </div>
+            </article>
+            <article class="user">
+                <div class="user-photo">
+                    <img src="img\cane.jpeg" alt="">
+                    <div class="nome-user">PincoPallo</div>
+                </div>
+            </article>
+            <article class="user">
+                <div class="user-photo">
+                    <img src="img\cane.jpeg" alt="">
+                    <div class="nome-user">PincoPallo</div>
+                </div>
+            </article>
+            <article class="user">
+                <div class="user-photo">
+                    <img src="img\cane.jpeg" alt="">
+                    <div class="nome-user">PincoPallo</div>
+                </div>
+            </article><article class="user">
+                <div class="user-photo">
+                    <img src="img\cane.jpeg" alt="">
+                    <div class="nome-user">PincoPallo</div>
+                </div>
+            </article>
+            <article class="user">
+                <div class="user-photo">
+                    <img src="img\cane.jpeg" alt="">
+                    <div class="nome-user">PincoPallo</div>
+                </div>
+            </article>
+        </section>
+        <section class="container row users">
+            <article class="user">
+                <div class="user-photo">
+                    <img src="img\cane.jpeg" alt="">
+                    <div class="nome-user">PincoPallo</div>
+                </div>
+            </article>
+            <article class="user">
+                <div class="user-photo">
+                    <img src="img\cane.jpeg" alt="">
+                    <div class="nome-user">PincoPallo</div>
+                </div>
+            </article>
+            <article class="user">
+                <div class="user-photo">
+                    <img src="img\cane.jpeg" alt="">
+                    <div class="nome-user">PincoPallo</div>
+                </div>
+            </article>
+            <article class="user">
+                <div class="user-photo">
+                    <img src="img\cane.jpeg" alt="">
+                    <div class="nome-user">PincoPallo</div>
+                </div>
+            </article>
+            <article class="user">
+                <div class="user-photo">
+                    <img src="img\cane.jpeg" alt="">
+                    <div class="nome-user">PincoPallo</div>
+                </div>
+            </article><article class="user">
+                <div class="user-photo">
+                    <img src="img\cane.jpeg" alt="">
+                    <div class="nome-user">PincoPallo</div>
+                </div>
+            </article>
+            <article class="user">
+                <div class="user-photo">
+                    <img src="img\cane.jpeg" alt="">
+                    <div class="nome-user">PincoPallo</div>
+                </div>
+            </article>
+        </section>
+        <section class="container row users">
+            <article class="user">
+                <div class="user-photo">
+                    <img src="img\cane.jpeg" alt="">
+                    <div class="nome-user">PincoPallo</div>
+                </div>
+            </article>
+            <article class="user">
+                <div class="user-photo">
+                    <img src="img\cane.jpeg" alt="">
+                    <div class="nome-user">PincoPallo</div>
+                </div>
+            </article>
+            <article class="user">
+                <div class="user-photo">
+                    <img src="img\cane.jpeg" alt="">
+                    <div class="nome-user">PincoPallo</div>
+                </div>
+            </article>
+            <article class="user">
+                <div class="user-photo">
+                    <img src="img\cane.jpeg" alt="">
+                    <div class="nome-user">PincoPallo</div>
+                </div>
+            </article>
+            <article class="user">
+                <div class="user-photo">
+                    <img src="img\cane.jpeg" alt="">
+                    <div class="nome-user">PincoPallo</div>
+                </div>
+            </article><article class="user">
+                <div class="user-photo">
+                    <img src="img\cane.jpeg" alt="">
+                    <div class="nome-user">PincoPallo</div>
+                </div>
+            </article>
+            <article class="user">
+                <div class="user-photo">
+                    <img src="img\cane.jpeg" alt="">
+                    <div class="nome-user">PincoPallo</div>
+                </div>
+            </article>
+        </section>
+        <section class="container row users">
+            <article class="user">
+                <div class="user-photo">
+                    <img src="img\cane.jpeg" alt="">
+                    <div class="nome-user">PincoPallo</div>
+                </div>
+            </article>
+            <article class="user">
+                <div class="user-photo">
+                    <img src="img\cane.jpeg" alt="">
+                    <div class="nome-user">PincoPallo</div>
+                </div>
+            </article>
+            <article class="user">
+                <div class="user-photo">
+                    <img src="img\cane.jpeg" alt="">
+                    <div class="nome-user">PincoPallo</div>
+                </div>
+            </article>
+            <article class="user">
+                <div class="user-photo">
+                    <img src="img\cane.jpeg" alt="">
+                    <div class="nome-user">PincoPallo</div>
+                </div>
+            </article>
+            <article class="user">
+                <div class="user-photo">
+                    <img src="img\cane.jpeg" alt="">
+                    <div class="nome-user">PincoPallo</div>
+                </div>
+            </article><article class="user">
+                <div class="user-photo">
+                    <img src="img\cane.jpeg" alt="">
+                    <div class="nome-user">PincoPallo</div>
+                </div>
+            </article>
+            <article class="user">
+                <div class="user-photo">
+                    <img src="img\cane.jpeg" alt="">
+                    <div class="nome-user">PincoPallo</div>
+                </div>
+            </article>
+        </section>
     </main>
     <footer></footer>
 </body>
