--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zoom</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <header>
@@ -229,6 +230,58 @@
             </article>
         </section>
     </main>
-    <footer></footer>
+    <footer>
+        <div class="row-footer">
+            <div class="voice-video">
+                <div class="icons">
+                    <i class="fas fa-microphone fa-2x"></i>
+                    <div>Mute</div>
+                </div>
+                <div class="icons">
+                    <i class="fas fa-angle-up"></i>
+                </div>
+                <div class="icons">
+                    <i class="fas fa-video fa-2x"></i>
+                    <div>Stop Video</div>
+                </div>
+                <div class="icons">
+                    <i class="fas fa-angle-up"></i>
+                </div>
+            </div>
+            <div class="option">
+                <div class="icons">
+                    <i class="fas fa-microphone fa-2x"></i>
+                    <div>Mute</div>
+                </div>
+                <div class="icons">
+                    <i class="fas fa-microphone fa-2x"></i>
+                    <div>Mute</div>
+                </div>
+                <div class="icons">
+                    <i class="fas fa-microphone fa-2x"></i>
+                    <div>Mute</div>
+                </div>
+                <div class="icons">
+                    <i class="fas fa-microphone fa-2x"></i>
+                    <div>Mute</div>
+                </div>
+                <div class="icons">
+                    <i class="fas fa-microphone fa-2x"></i>
+                    <div>Mute</div>
+                </div>
+                <div class="icons">
+                    <i class="fas fa-microphone fa-2x"></i>
+                    <div>Mute</div>
+                </div>
+                <div class="icons">
+                    <i class="fas fa-microphone fa-2x"></i>
+                    <div>Mute</div>
+                </div>             
+            </div>
+            <div class="end">
+                <button class="end-meeting">End Meeting</button>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
