--- a/index.html
+++ b/index.html
@@ -18,42 +18,49 @@
             <article class="user">
                 <div class="user-photo">
                     <img src="img\cane.jpeg" alt="">
-                    <div class="nome-user">PincoPallo</div>
+                    <div class="nome-user"><span><i class="fa-solid fa-microphone-slash"></i>
+                    </span> PincoPallo</div>
                 </div>
             </article>
             <article class="user">
                 <div class="user-photo">
                     <img src="img\cane.jpeg" alt="">
-                    <div class="nome-user">PincoPallo</div>
+                    <div class="nome-user"><span><i class="fa-solid fa-microphone-slash"></i>
+                    </span> PincoPallo</div>
                 </div>
             </article>
             <article class="user">
                 <div class="user-photo">
                     <img src="img\cane.jpeg" alt="">
-                    <div class="nome-user">PincoPallo</div>
+                    <div class="nome-user"><span><i class="fa-solid fa-microphone-slash"></i>
+                    </span> PincoPallo</div>
                 </div>
             </article>
             <article class="user">
                 <div class="user-photo">
                     <img src="img\cane.jpeg" alt="">
-                    <div class="nome-user">PincoPallo</div>
+                    <div class="nome-user"><span><i class="fa-solid fa-microphone-slash"></i>
+                    </span> PincoPallo</div>
                 </div>
             </article>
             <article class="user">
                 <div class="user-photo">
                     <img src="img\cane.jpeg" alt="">
-                    <div class="nome-user">PincoPallo</div>
+                    <div class="nome-user"><span><i class="fa-solid fa-microphone-slash"></i>
+                    </span> PincoPallo</div>
                 </div>
             </article><article class="user">
                 <div class="user-photo">
                     <img src="img\cane.jpeg" alt="">
-                    <div class="nome-user">PincoPallo</div>
+                    <div class="nome-user"><span><i class="fa-solid fa-microphone-slash"></i>
+                    </span> PincoPallo</div>
                 </div>
             </article>
             <article class="user">
                 <div class="user-photo">
                     <img src="img\cane.jpeg" alt="">
-                    <div class="nome-user">PincoPallo</div>
+                    <div class="nome-user"><span><i class="fa-solid fa-microphone-slash"></i>
+                    </span> PincoPallo</div>
                 </div>
             </article>
         </section>
@@ -61,42 +68,49 @@
             <article class="user">
                 <div class="user-photo">
                     <img src="img\cane.jpeg" alt="">
-                    <div class="nome-user">PincoPallo</div>
+                    <div class="nome-user"><span><i class="fa-solid fa-microphone-slash"></i>
+                    </span> PincoPallo</div>
                 </div>
             </article>
             <article class="user">
                 <div class="user-photo">
                     <img src="img\cane.jpeg" alt="">
-                    <div class="nome-user">PincoPallo</div>
+                    <div class="nome-user"><span><i class="fa-solid fa-microphone-slash"></i>
+                    </span> PincoPallo</div>
                 </div>
             </article>
             <article class="user">
                 <div class="user-photo">
                     <img src="img\cane.jpeg" alt="">
-                    <div class="nome-user">PincoPallo</div>
+                    <div class="nome-user"><span><i class="fa-solid fa-microphone-slash"></i>
+                    </span> PincoPallo</div>
                 </div>
             </article>
             <article class="user">
                 <div class="user-photo">
                     <img src="img\cane.jpeg" alt="">
-                    <div class="nome-user">PincoPallo</div>
+                    <div class="nome-user"><span><i class="fa-solid fa-microphone-slash"></i>
+                    </span> PincoPallo</div>
                 </div>
             </article>
             <article class="user">
                 <div class="user-photo">
                     <img src="img\cane.jpeg" alt="">
-                    <div class="nome-user">PincoPallo</div>
+                    <div class="nome-user"><span><i class="fa-solid fa-microphone-slash"></i>
+                    </span> PincoPallo</div>
                 </div>
             </article><article class="user">
                 <div class="user-photo">
                     <img src="img\cane.jpeg" alt="">
-                    <div class="nome-user">PincoPallo</div>
+                    <div class="nome-user"><span><i class="fa-solid fa-microphone-slash"></i>
+                    </span> PincoPallo</div>
                 </div>
             </article>
             <article class="user">
                 <div class="user-photo">
                     <img src="img\cane.jpeg" alt="">
-                    <div class="nome-user">PincoPallo</div>
+                    <div class="nome-user"><span><i class="fa-solid fa-microphone-slash"></i>
+                    </span> PincoPallo</div>
                 </div>
             </article>
         </section>
@@ -104,42 +118,49 @@
             <article class="user">
                 <div class="user-photo">
                     <img src="img\cane.jpeg" alt="">
-                    <div class="nome-user">PincoPallo</div>
+                    <div class="nome-user"><span><i class="fa-solid fa-microphone-slash"></i>
+                    </span> PincoPallo</div>
                 </div>
             </article>
             <article class="user">
                 <div class="user-photo">
                     <img src="img\cane.jpeg" alt="">
-                    <div class="nome-user">PincoPallo</div>
+                    <div class="nome-user"><span><i class="fa-solid fa-microphone-slash"></i>
+                    </span> PincoPallo</div>
                 </div>
             </article>
             <article class="user">
                 <div class="user-photo">
                     <img src="img\cane.jpeg" alt="">
-                    <div class="nome-user">PincoPallo</div>
+                    <div class="nome-user"><span><i class="fa-solid fa-microphone-slash"></i>
+                    </span> PincoPallo</div>
                 </div>
             </article>
             <article class="user">
                 <div class="user-photo">
                     <img src="img\cane.jpeg" alt="">
-                    <div class="nome-user">PincoPallo</div>
+                    <div class="nome-user"><span><i class="fa-solid fa-microphone-slash"></i>
+                    </span> PincoPallo</div>
                 </div>
             </article>
             <article class="user">
                 <div class="user-photo">
                     <img src="img\cane.jpeg" alt="">
-                    <div class="nome-user">PincoPallo</div>
+                    <div class="nome-user"><span><i class="fa-solid fa-microphone-slash"></i>
+                    </span> PincoPallo</div>
                 </div>
             </article><article class="user">
                 <div class="user-photo">
                     <img src="img\cane.jpeg" alt="">
-                    <div class="nome-user">PincoPallo</div>
+                    <div class="nome-user"><span><i class="fa-solid fa-microphone-slash"></i>
+                    </span> PincoPallo</div>
                 </div>
             </article>
             <article class="user">
                 <div class="user-photo">
                     <img src="img\cane.jpeg" alt="">
-                    <div class="nome-user">PincoPallo</div>
+                    <div class="nome-user"><span><i class="fa-solid fa-microphone-slash"></i>
+                    </span> PincoPallo</div>
                 </div>
             </article>
         </section>
@@ -147,42 +168,49 @@
             <article class="user">
                 <div class="user-photo">
                     <img src="img\cane.jpeg" alt="">
-                    <div class="nome-user">PincoPallo</div>
+                    <div class="nome-user"><span><i class="fa-solid fa-microphone-slash"></i>
+                    </span> PincoPallo</div>
                 </div>
             </article>
             <article class="user">
                 <div class="user-photo">
                     <img src="img\cane.jpeg" alt="">
-                    <div class="nome-user">PincoPallo</div>
+                    <div class="nome-user"><span><i class="fa-solid fa-microphone-slash"></i>
+                    </span> PincoPallo</div>
                 </div>
             </article>
             <article class="user">
                 <div class="user-photo">
                     <img src="img\cane.jpeg" alt="">
-                    <div class="nome-user">PincoPallo</div>
+                    <div class="nome-user"><span><i class="fa-solid fa-microphone-slash"></i>
+                    </span> PincoPallo</div>
                 </div>
             </article>
             <article class="user">
                 <div class="user-photo">
                     <img src="img\cane.jpeg" alt="">
-                    <div class="nome-user">PincoPallo</div>
+                    <div class="nome-user"><span><i class="fa-solid fa-microphone-slash"></i>
+                    </span> PincoPallo</div>
                 </div>
             </article>
             <article class="user">
                 <div class="user-photo">
                     <img src="img\cane.jpeg" alt="">
-                    <div class="nome-user">PincoPallo</div>
+                    <div class="nome-user"><span><i class="fa-solid fa-microphone-slash"></i>
+                    </span> PincoPallo</div>
                 </div>
             </article><article class="user">
                 <div class="user-photo">
                     <img src="img\cane.jpeg" alt="">
-                    <div class="nome-user">PincoPallo</div>
+                    <div class="nome-user"><span><i class="fa-solid fa-microphone-slash"></i>
+                    </span> PincoPallo</div>
                 </div>
             </article>
             <article class="user">
                 <div class="user-photo">
                     <img src="img\cane.jpeg" alt="">
-                    <div class="nome-user">PincoPallo</div>
+                    <div class="nome-user"><span><i class="fa-solid fa-microphone-slash"></i>
+                    </span> PincoPallo</div>
                 </div>
             </article>
         </section>
@@ -190,42 +218,49 @@
             <article class="user">
                 <div class="user-photo">
                     <img src="img\cane.jpeg" alt="">
-                    <div class="nome-user">PincoPallo</div>
+                    <div class="nome-user"><span><i class="fa-solid fa-microphone-slash"></i>
+                    </span> PincoPallo</div>
                 </div>
             </article>
             <article class="user">
                 <div class="user-photo">
                     <img src="img\cane.jpeg" alt="">
-                    <div class="nome-user">PincoPallo</div>
+                    <div class="nome-user"><span><i class="fa-solid fa-microphone-slash"></i>
+                    </span> PincoPallo</div>
                 </div>
             </article>
             <article class="user">
                 <div class="user-photo">
                     <img src="img\cane.jpeg" alt="">
-                    <div class="nome-user">PincoPallo</div>
+                    <div class="nome-user"><span><i class="fa-solid fa-microphone-slash"></i>
+                    </span> PincoPallo</div>
                 </div>
             </article>
             <article class="user">
                 <div class="user-photo">
                     <img src="img\cane.jpeg" alt="">
-                    <div class="nome-user">PincoPallo</div>
+                    <div class="nome-user"><span><i class="fa-solid fa-microphone-slash"></i>
+                    </span> PincoPallo</div>
                 </div>
             </article>
             <article class="user">
                 <div class="user-photo">
                     <img src="img\cane.jpeg" alt="">
-                    <div class="nome-user">PincoPallo</div>
+                    <div class="nome-user"><span><i class="fa-solid fa-microphone-slash"></i>
+                    </span> PincoPallo</div>
                 </div>
             </article><article class="user">
                 <div class="user-photo">
                     <img src="img\cane.jpeg" alt="">
-                    <div class="nome-user">PincoPallo</div>
+                    <div class="nome-user"><span><i class="fa-solid fa-microphone-slash"></i>
+                    </span> PincoPallo</div>
                 </div>
             </article>
             <article class="user">
                 <div class="user-photo">
                     <img src="img\cane.jpeg" alt="">
-                    <div class="nome-user">PincoPallo</div>
+                    <div class="nome-user"><span><i class="fa-solid fa-microphone-slash"></i>
+                    </span> PincoPallo</div>
                 </div>
             </article>
         </section>
@@ -250,32 +285,39 @@
             </div>
             <div class="option">
                 <div class="icons">
-                    <i class="fas fa-microphone fa-2x"></i>
-                    <div>Mute</div>
+                    <i class="fas fa-user-plus fa-2x"></i>
+                    <div>Invite</div>
                 </div>
                 <div class="icons">
-                    <i class="fas fa-microphone fa-2x"></i>
-                    <div>Mute</div>
+                    <i class="fas fa-user-friends fa-2x"></i>
+                    <div>Partecipanti </div>
                 </div>
                 <div class="icons">
-                    <i class="fas fa-microphone fa-2x"></i>
-                    <div>Mute</div>
+                    <i class="fas fa-chart-bar fa-2x"></i>
+                    <div>Polling</div>
                 </div>
                 <div class="icons">
-                    <i class="fas fa-microphone fa-2x"></i>
-                    <div>Mute</div>
+                    <i class="fas fa-share-square fa-2x"></i>
+                    <div>Condividi Schermo</div>
                 </div>
                 <div class="icons">
-                    <i class="fas fa-microphone fa-2x"></i>
-                    <div>Mute</div>
+                    <i class="fas fa-angle-up"></i>
                 </div>
                 <div class="icons">
-                    <i class="fas fa-microphone fa-2x"></i>
-                    <div>Mute</div>
+                    <i class="fas fa-comment fa-2x"></i>
+                    <div>Chat</div>
                 </div>
                 <div class="icons">
-                    <i class="fas fa-microphone fa-2x"></i>
-                    <div>Mute</div>
+                    <i class="fas fa-record-vinyl fa-2x"></i>
+                    <div>Record</div>
+                </div> 
+                <div class="icons">
+                    <i class="fas fa-th-large fa-2x"></i>
+                    <div>Breackout Rooms</div>
+                </div> 
+                <div class="icons">
+                    <i class="fas fa-ellipsis-h fa-2x"></i>
+                    <div>More</div>
                 </div>             
             </div>
             <div class="end">
